syntax="proto2";

package proto;
option go_package = "./counters_grpc";

service RaftNode {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message AppendEntriesRequest {
  required uint64 term = 1;
  required uint32 leaderId = 2;
  required int32 prevLogIndex = 3;
  required uint64 prevLogTerm = 4;
  repeated Entry entries = 5;
  required int32 leaderCommit = 6;
}

message AppendEntriesResponse {
  required uint64 term = 1;
  required bool success = 2;
}

message Entry {
  required uint64 term = 1;
  required int32 index = 2;
  required uint32 value = 3;
}

message RequestVoteRequest {
  required uint64 term = 1;
  required uint32 candidateId = 2;
  required int32 lastLogIndex = 3;
  required uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
  required uint64 term = 1;
  required bool voteGranted = 2;
}
